// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HostGameFooter > matches snapshot (menu closed) 1`] = `
<div
  class="main"
>
  <div
    class="questions"
  >
    <span
      data-testid="fa-icon"
    >
      true
    </span>
    <span>
      1
       / 
      1
    </span>
  </div>
  <div
    class="gamePIN"
  >
    <span
      data-testid="fa-icon"
    >
      true
    </span>
    <span>
      123456
    </span>
  </div>
  <div
    class="actions"
  >
    <div
      class="menuButtonWrapper"
    >
      <button
        id="settings-button"
        type="button"
      >
        Button
      </button>
      <div
        data-testid="menu"
      >
        <div
          data-testid="menu-open"
        >
          false
        </div>
        <button
          data-testid="menu-close"
          type="button"
        >
          close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`HostGameFooter > matches snapshot (menu open) 1`] = `
<div
  class="main"
>
  <div
    class="questions"
  >
    <span
      data-testid="fa-icon"
    >
      true
    </span>
    <span>
      1
       / 
      1
    </span>
  </div>
  <div
    class="gamePIN"
  >
    <span
      data-testid="fa-icon"
    >
      true
    </span>
    <span>
      123456
    </span>
  </div>
  <div
    class="actions"
  >
    <div
      class="menuButtonWrapper"
    >
      <button
        id="settings-button"
        type="button"
      >
        Button
      </button>
      <div
        data-testid="menu"
      >
        <div
          data-testid="menu-open"
        >
          true
        </div>
        <button
          data-testid="menu-close"
          type="button"
        >
          close
        </button>
        <div
          data-testid="menu-content"
        >
          <button
            type="button"
          >
            Players
          </button>
          <button
            type="button"
          >
            Maximize
          </button>
          <div
            data-testid="menu-separator"
          />
          <button
            type="button"
          >
            Quit
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HostGameFooter > matches snapshot (player management modal open) 1`] = `
<div
  class="main"
>
  <div
    class="questions"
  >
    <span
      data-testid="fa-icon"
    >
      true
    </span>
    <span>
      1
       / 
      1
    </span>
  </div>
  <div
    class="gamePIN"
  >
    <span
      data-testid="fa-icon"
    >
      true
    </span>
    <span>
      123456
    </span>
  </div>
  <div
    class="actions"
  >
    <div
      class="menuButtonWrapper"
    >
      <button
        id="settings-button"
        type="button"
      >
        Button
      </button>
      <div
        data-testid="menu"
      >
        <div
          data-testid="menu-open"
        >
          true
        </div>
        <button
          data-testid="menu-close"
          type="button"
        >
          close
        </button>
        <div
          data-testid="menu-content"
        >
          <button
            type="button"
          >
            Players
          </button>
          <button
            type="button"
          >
            Maximize
          </button>
          <div
            data-testid="menu-separator"
          />
          <button
            type="button"
          >
            Quit
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="player-management-modal"
  >
    <div
      data-testid="player-management-modal-open"
    >
      true
    </div>
    <button
      data-testid="player-management-modal-close"
      type="button"
    >
      close
    </button>
  </div>
</div>
`;

exports[`HostGameFooter > matches snapshot (quit confirm dialog open) 1`] = `
<div
  class="main"
>
  <div
    class="questions"
  >
    <span
      data-testid="fa-icon"
    >
      true
    </span>
    <span>
      1
       / 
      1
    </span>
  </div>
  <div
    class="gamePIN"
  >
    <span
      data-testid="fa-icon"
    >
      true
    </span>
    <span>
      123456
    </span>
  </div>
  <div
    class="actions"
  >
    <div
      class="menuButtonWrapper"
    >
      <button
        id="settings-button"
        type="button"
      >
        Button
      </button>
      <div
        data-testid="menu"
      >
        <div
          data-testid="menu-open"
        >
          true
        </div>
        <button
          data-testid="menu-close"
          type="button"
        >
          close
        </button>
        <div
          data-testid="menu-content"
        >
          <button
            type="button"
          >
            Players
          </button>
          <button
            type="button"
          >
            Maximize
          </button>
          <div
            data-testid="menu-separator"
          />
          <button
            type="button"
          >
            Quit
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="confirm-dialog"
  >
    <div>
      Are you sure you want to quit the game?
    </div>
    <div>
      This will immediately end the game for all participants, and it cannot be resumed.
    </div>
    <button
      type="button"
    >
      Quit Game
    </button>
    <button
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;
